--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react": "*",
     "react-dom": "*",
     "react-redux": "^7.2.1",
+    "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8"
   }
