useParams for display Recipe components

--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "prop-types": "*",
     "react": "*",
     "react-dom": "*",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "slugify": "^1.4.5"
   }
 }
