--- a/package.json
+++ b/package.json
@@ -58,7 +58,10 @@
     "prop-types": "*",
     "react": "*",
     "react-dom": "*",
+    "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "slugify": "^1.4.5"
   }
 }
