--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "webpack-merge": "*"
   },
   "dependencies": {
+    "axios": "^0.20.0",
     "prop-types": "*",
     "react": "*",
     "react-dom": "*",
