import mocha and chai and write the first test

--- a/package.json
+++ b/package.json
@@ -16,18 +16,18 @@
     "@babel/plugin-proposal-object-rest-spread": "*",
     "@babel/preset-env": "*",
     "@babel/preset-react": "*",
-    "@babel/register": "*",
+    "@babel/register": "^7.11.5",
     "babel-eslint": "*",
     "babel-loader": "*",
     "bundle-stats-webpack-plugin": "*",
-    "chai": "*",
+    "chai": "^4.2.0",
     "clean-webpack-plugin": "*",
     "copy-webpack-plugin": "*",
     "cross-env": "*",
     "css-loader": "*",
     "cssnano": "*",
-    "enzyme": "*",
-    "enzyme-adapter-react-16": "*",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.4",
     "eslint": "*",
     "eslint-config-airbnb": "*",
     "eslint-import-resolver-alias": "*",
@@ -37,10 +37,10 @@
     "eslint-plugin-react-hooks": "*",
     "file-loader": "*",
     "html-webpack-plugin": "*",
-    "ignore-styles": "*",
-    "jsdom": "*",
+    "ignore-styles": "^5.0.1",
+    "jsdom": "^16.4.0",
     "mini-css-extract-plugin": "*",
-    "mocha": "*",
+    "mocha": "^8.1.3",
     "optimize-css-assets-webpack-plugin": "*",
     "postcss-loader": "*",
     "postcss-preset-env": "*",
